added the parallax effect

--- a/clue-for-you-front-end/browse.html
+++ b/clue-for-you-front-end/browse.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Clue For You</title>
+    <title>Browse - Clue For You</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
@@ -11,28 +11,14 @@
 <body>
     <header>
         <nav>
-            <h1 class="title"><a href="landing.html">ClueForYou</a></h1>
+                <h1 class="title"><a href="landing.html">ClueForYou</a></h1>
             <ul class="navlist">
-                <li class="nav-item"><a href="browse.html">Browse</a></li>
+                <li class="nav-item">Browse</li>
                 <li class="nav-item">Sign Up</li>
             </ul>
         </nav>
     </header>
     <main>
-        <div id="scene" class="welcome">
-            <div data-depth="0.3" class="parallax">
-                    <h2 class="welcome-header">Welcome to ClueForYou</h2>
-                    <p class="subheader">The largest collection of picture clues on the World Wide Web</p>
-            </div>
-        </div>
-        <div class="landing-page-buttons">
-            <div class="browse-div">
-                <p class="options">Browse</p>
-            </div>
-            <div class="make-your-own-div">
-                <p class="options">Make Your Own</p>
-            </div>
-        </div>
     </main>
     <footer>
         <p class="copyright">Harry Stacey &copy;</p>
